# eth-autonomous-cars

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
data/: README.md
docs/: OVERVIEW.md
src/autonomous_cars/: __init__.py
src/autonomous_cars/detection_3d/: README.md  __init__.py  boxes.py  roi_pool.py
src/autonomous_cars/visualization/: README.md  __init__.py  data_loader.py  visualize_2d.py  visualize_3d.py
tests/: test_detection_3d.py
